--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
       <span class="material-icons" style="font-size:60px;color: yellowgreen">language</span>
       <h4>LANGUAGES</h4>
       <h3>JavaScript - Intermediate to Proficient</h3>
-      <h3>React.js - Intermediate</h3>
+      <h3>React.js - Basic to Intermediate</h3>
       <h3>Python - Basic</h3>
     </div>
   </div>
