--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
       </h4><br>
       <p> From being a licensed public chauffeur (one of the most memorable professions I've had) to supervising the massive parking
       logistics for the always-busy River North Neighborhood entertainment businesses. On top of that, I've been a tax preparer,
-      investor, mortgage broker, real estate agent and a junior real estate appraiser.Let’s embark together into the endless possibilities that software development puts at our
+      investor, mortgage broker, real estate agent and a junior real estate appraiser. Let’s embark together into the endless possibilities that software development puts at our
       disposition.</p>
      </div>
     <div class="col-sm-4">
@@ -281,9 +281,9 @@
     <div class="col-sm-4">
       <span class="material-icons" style="font-size:60px;color: yellowgreen">language</span>
       <h4>LANGUAGES</h4>
-      <h3>JavaScript - Intermediate to Proficient</h3>
-      <h3>React.js - Basic to Intermediate</h3>
-      <h3>Python - Basic</h3>
+      <h3>JavaScript</h3>
+      <h3>React.js</h3>
+      <h3>Python</h3>
     </div>
   </div>
   <br><br>
@@ -316,7 +316,7 @@
         <a href = "https://quangao.github.io/dinner-savior/">
         <img src="DinnerSavior.png" alt="Dinner Savior" width="400" height="300">
         <p><strong>Dinner Savior</strong></p>
-        <p>Firebase powered restaurant wait time reporting</p>
+        <p>Firebase-powered restaurant wait-time reporting</p>
         <p>Local Storage</p>
       </div>
     </div>
@@ -325,7 +325,7 @@
         <a href = "https://bark-park-woof.herokuapp.com/">
         <img src="barkparkscheroku.png" alt="Bark Park" width="400" height="300">
         <p><strong>Bark Park</strong></p>
-        <p>We built Bark Park, should'nt your dog have friends too!!!</p>
+        <p>Social media for your dog!</p>
         <p>MySQL, Passport.js, socket IO</p>
       </div>
     </div>
