--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
     <div class="col-sm-8">
       <h2>About Me</h2><br>
       <h4>Hello, I am originally from Guatemala, Central America. Since moving to Chicago in the late '90s, I have worked in many different
-      industries and witnessed from the service provider side how techonology, especially software applications have made scalability possible
+      industries and witnessed from the service provider side how technology, especially software applications have made scalability possible
       along with accuracy and effectiveness to better service the community.     
       </h4><br>
       <p> From being a licensed public chauffeur (one of the most memorable professions I've had) to supervising the massive parking
