--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
-  <link rel="icon" type="image/png" href="mypic.png?version=2017.1.3">
+  <link rel="icon" type="image/png" href="mypic1.png?version=2017.1.3">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -243,7 +243,7 @@
       disposition.</p>
      </div>
     <div class="col-sm-4">
-      <span><img class="rounded-2" src="mypic.png" alt="mypicture" width="230" height="230"></span> <!--class="glyphicon glyphicon-signal logo"></span>-->
+      <span><img class="rounded-2" src="mypic1.png" alt="mypicture" width="230" height="230"></span> <!--class="glyphicon glyphicon-signal logo"></span>-->
     </div>
   </div>
 </div>
