resume download btn added

--- a/index.html
+++ b/index.html
@@ -212,6 +212,12 @@
   .rounded-2 {
     border-radius: 6px !important;
   }
+
+  .btnresume {
+    background: whitesmoke;
+    color: black;
+    padding: 15px;
+  }
   </style>
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
@@ -243,6 +249,7 @@
 <div class="jumbotron text-center">
   <h1>Luis Rosales</h1> 
   <p>FULLSTACK WEB DEVELOPER</p> 
+  <a href="resumeLR.pdf" class="btnresume" download>Download Resume PDF</a>
 </div>
 
 <!-- Container (About Section) -->
