pics unsplash.com

--- a/index.html
+++ b/index.html
@@ -34,10 +34,15 @@
       margin-bottom: 30px;
   }  
   .jumbotron {
-      background-color: #2b3e50;
+      /* background-color: #2b3e50; */
+      background: linear-gradient(rgba(43, 62, 80, 0.8),
+      rgba(43, 62, 80, 0.5)),
+      url(pedro-lastra-157071-unsplash.jpg) no-repeat fixed;
+      background-size: cover;
       color: #fff;
       padding: 100px 25px;
       font-family: Montserrat, sans-serif;
+      margin: 0 auto;
   }
   .container-fluid {
       padding: 60px 50px;
@@ -217,6 +222,15 @@
     background: whitesmoke;
     color: black;
     padding: 15px;
+  }
+
+  #about,h2,h4{
+    background: linear-gradient(rgba(43, 62, 80, 0.8),
+    rgba(43, 62, 80, 0.5)),
+    url(pedro-lastra-157071-unsplash.jpg) no-repeat fixed;
+    background-size: cover;
+    color: whitesmoke;
+    /* margin: 0 auto; */
   }
   </style>
 </head>
