--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 <div class="jumbotron text-center">
   <h1>Luis Rosales</h1> 
   <p>FULLSTACK WEB DEVELOPER</p> 
-  <a href="resumeLR.pdf" class="btnresume" download>Download Resume PDF</a>
+  <a href="resume_LR.pdf" class="btnresume" download>Download Resume PDF</a>
 </div>
 
 <!-- Container (About Section) -->
