--- a/index.html
+++ b/index.html
@@ -271,14 +271,15 @@
   <div class="row">
     <div class="col-sm-8">
       <h2>About Me</h2><br>
-      <h4>Hello, I am originally from Guatemala, Central America. Since moving to Chicago in the late '90s, I have worked in many different
-      industries and witnessed from the service provider side how technology, especially software applications have made scalability possible
-      along with accuracy and effectiveness to better service the community.     
+      <h4>Hello, I am a software developer and a soon-to-be graduating Computer Science student with a background
+        in Data Science, Machine Learning, and Front and Backend Web Development Technologies. I am currently looking
+        for employment as a Java Associate Developer or Python Associate Data Engineer in the Chicago-land or
+        remote positions.
       </h4><br>
-      <p> From being a licensed public chauffeur (one of the most memorable professions I've had) to supervising the massive parking
+      <!--<p> From being a licensed public chauffeur (one of the most memorable professions I've had) to supervising the massive parking
       logistics for the always-busy River North Neighborhood entertainment businesses. On top of that, I've been a tax preparer,
       investor, mortgage broker, real estate agent and a junior real estate appraiser. Let’s embark together into the endless possibilities that software development puts at our
-      disposition.</p>
+      disposition.</p>-->
      </div>
     <div class="col-sm-4">
       <span><img class="rounded-2" src="mypic1.png" alt="mypicture" width="230" height="230"></span> <!--class="glyphicon glyphicon-signal logo"></span>-->
