--- a/index.html
+++ b/index.html
@@ -271,8 +271,8 @@
   <div class="row">
     <div class="col-sm-8">
       <h2>About Me</h2><br>
-      <h4>Hello, I am a software developer and a soon-to-be graduating Computer Science student with a background
-        in Data Science, Machine Learning, and Front and Backend Web Development Technologies. I am currently looking
+      <h4>Hello, I am a software developer and a soon-to-be graduating Computer Science student with a concentration in
+        Information Technology and a background in Data Science, Machine Learning, and Front and Backend Web Development Technologies. I am currently looking
         for employment as a Java Associate Developer or Python Associate Data Engineer in the Chicago-land or
         remote positions.
       </h4><br>
