--- a/index.html
+++ b/index.html
@@ -262,7 +262,8 @@
 
 <div class="jumbotron text-center">
   <h1>Luis Rosales</h1> 
-  <p>FULLSTACK WEB DEVELOPER</p> 
+  <p>SOFTWARE DEVELOPER</p>
+  <p>FULLSTACK WEB DEVELOPER</p>
   <a href="resume_LR.pdf" class="btnresume" download>Download Resume PDF</a>
 </div>
 
