--- a/index.html
+++ b/index.html
@@ -286,15 +286,14 @@
 
 <div style="background-image: url(FEBE.png); width:100%; height:450px;"class="container-fluid bg-grey">
   <div class="row">
-    
   </div>
 </div>
 
 <!-- Container (Skills  Section) -->
 <div id="services" class="container-fluid text-center">
   <h2>SKILLS & KNOWLEDGE</h2>
-  <h4>My training @ Northwestern's Coding Bootcamp focuses on the MERN stack</h4>
-  <h4><em>I am eager to learn new software techonologies</em></h4>
+  <h4>My education @ Northeastern covers the fundamentals of Programming and CS Science and my training @ Northwestern's Coding Bootcamp focuses on the MERN stack</h4>
+  <h4><em>I am eager to learn new software technologies</em></h4>
   <br>
   <div class="row slideanim">
     <div class="col-sm-4">
