--- a/index.html
+++ b/index.html
@@ -292,26 +292,30 @@
 <!-- Container (Skills  Section) -->
 <div id="services" class="container-fluid text-center">
   <h2>SKILLS & KNOWLEDGE</h2>
-  <h4>My education @ Northeastern covers the fundamentals of Programming and CS Science and my training @ Northwestern's Coding Bootcamp focuses on the MERN stack</h4>
+  <h4>My education @ Northeastern covers the fundamentals of Programming and CS Science and my training @ Northwestern Coding Bootcamp focuses on the MERN stack</h4>
   <h4><em>I am eager to learn new software technologies</em></h4>
   <br>
   <div class="row slideanim">
     <div class="col-sm-4">
       <span class="fa fa-database" style="font-size: 60px; color:green"></span>
       <h4>DATABASES</h4>
-      <h3>MongoDB, MySQL and Firebase</h3>
+      <h3>MySQL, JDBC, JPA</h3>
+      <h3>MongoDB</h3>
+      <h3>Firebase</h3>
     </div>
     <div class="col-sm-4">
       <span class="fa fa-server" style="font-size:60px; color:rgb(206, 148, 148)" ></span>
       <h4>SERVER</h4>
+      <h3>Java Spring Boot</h3>
       <h3>Node.js - Express.js</h3>
+      <h3>PHP</h3>
     </div>
     <div class="col-sm-4">
       <span class="material-icons" style="font-size:60px;color: yellowgreen">language</span>
       <h4>LANGUAGES</h4>
-      <h3>JavaScript</h3>
-      <h3>React.js</h3>
+      <h3>Java</h3>
       <h3>Python</h3>
+      <h3>JavaScript</h3>
     </div>
   </div>
   <br><br>
@@ -324,7 +328,7 @@
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-wrench logo-small"></span>
       <h4>TOOLS</h4>
-      <h3>jQuery & AJAX</h3>
+      <h3>Plotly</h3>
     </div>
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-wrench logo-small"></span>
@@ -341,7 +345,7 @@
   <div class="row text-center slideanim">
     <div class="col-sm-4">
       <div class="thumbnail">
-        <a href = "https://quangao.github.io/dinner-savior/">
+        <a href = "https://quangao.github.io/dinner-savior/"></a>
         <img src="DinnerSavior.png" alt="Dinner Savior" width="400" height="300">
         <p><strong>Dinner Savior</strong></p>
         <p>Firebase-powered restaurant wait-time reporting</p>
@@ -350,7 +354,7 @@
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <a href = "https://bark-park-woof.herokuapp.com/">
+        <a href = "https://bark-park-woof.herokuapp.com/"></a>
         <img src="barkparkscheroku.png" alt="Bark Park" width="400" height="300">
         <p><strong>Bark Park</strong></p>
         <p>Social media for your dog!</p>
@@ -359,7 +363,7 @@
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <a href = "https://alaporteslive.herokuapp.com">
+        <a href = "https://alaporteslive.herokuapp.com"></a>
         <img src="atthegate.png" alt="AtTheGate" width="400" height="300">
         <p><strong>At The Gate</strong></p>
         <p>Pre order food from any vendor inside the terminal / gate from which your flight is departing from</p>
