--- a/index.html
+++ b/index.html
@@ -345,8 +345,8 @@
   <div class="row text-center slideanim">
     <div class="col-sm-4">
       <div class="thumbnail">
-        <a href = "https://quangao.github.io/dinner-savior/"></a>
-        <img src="DinnerSavior.png" alt="Dinner Savior" width="400" height="300">
+        <a href = "https://quangao.github.io/dinner-savior/"><img src="DinnerSavior.png" alt="Dinner Savior" width="400" height="300"></a>
+<!--        <img src="DinnerSavior.png" alt="Dinner Savior" width="400" height="300">-->
         <p><strong>Dinner Savior</strong></p>
         <p>Firebase-powered restaurant wait-time reporting</p>
         <p>Local Storage</p>
@@ -354,8 +354,8 @@
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <a href = "https://bark-park-woof.herokuapp.com/"></a>
-        <img src="barkparkscheroku.png" alt="Bark Park" width="400" height="300">
+        <a href = "https://bark-park-woof.herokuapp.com/"><img src="barkparkscheroku.png" alt="Bark Park" width="400" height="300"></a>
+<!--        <img src="barkparkscheroku.png" alt="Bark Park" width="400" height="300">-->
         <p><strong>Bark Park</strong></p>
         <p>Social media for your dog!</p>
         <p>MySQL, Passport.js, socket IO</p>
@@ -363,8 +363,8 @@
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <a href = "https://alaporteslive.herokuapp.com"></a>
-        <img src="atthegate.png" alt="AtTheGate" width="400" height="300">
+        <a href = "https://alaporteslive.herokuapp.com"><img src="atthegate.png" alt="AtTheGate" width="400" height="300"></a>
+<!--        <img src="atthegate.png" alt="AtTheGate" width="400" height="300">-->
         <p><strong>At The Gate</strong></p>
         <p>Pre order food from any vendor inside the terminal / gate from which your flight is departing from</p>
         <p>React.js-Firebase authentication for REACT-MongoDB</p>
