--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 <!-- Container (Portfolio Section) -->
 <div id="portfolio" class="container-fluid text-center bg-grey">
   <h2>Portfolio</h2><br>
-  <h4>What the teams I was a member of created!</h4>
+  <h4>Team Projects </h4>
   <div class="row text-center slideanim">
     <div class="col-sm-4">
       <div class="thumbnail">
