--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#about">ABOUT ME</a></li>
-        <li><a href="#services">SKILLS</a>
+        <li><a href="#skills">SKILLS</a>
         <li><a href="#portfolio">PORTFOLIO</a></li>
         <li><a href="#contact">CONTACT</a></li>
         <li><a href="https://github.com/guama1239" target="_blank" class="github-icon social-nav-icon"><i class="fa fa-github-square fa-2x"></i></a></li>
@@ -289,8 +289,8 @@
 </div>
 
 <!-- Container (Skills  Section) -->
-<div id="services" class="container-fluid text-center">
-  <h2>SKILLS & KNOWLEDGE</h2>
+<div id="skills" class="container-fluid text-center">
+  <h2>SKILLS</h2>
   <h4>My education @ Northeastern covers the fundamentals of Programming and CS Science and my training @ Northwestern Coding Bootcamp focuses on the MERN stack</h4>
   <h4><em>I am eager to learn new software technologies</em></h4>
   <br>
