--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 
 <!-- Container (Portfolio Section) -->
 <div id="portfolio" class="container-fluid text-center bg-grey">
-  <h2>Portfolio</h2><br>
+  <h2>Portfolio</h2>
   <h4>Team Projects</h4>
   <div class="row text-center slideanim">
     <div class="col-sm-4">
