--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       color: #fff !important;
   }
   .navbar-nav li a:hover, .navbar-nav li.active a {
-      color: #f4511e !important;
+      color: blue !important;
       background-color: #fff !important;
   }
   .navbar-default .navbar-toggle {
@@ -229,7 +229,7 @@
     rgba(43, 62, 80, 0.5)),
     url(pedro-lastra-157071-unsplash.jpg) no-repeat fixed;
     background-size: cover;
-    color: whitesmoke;
+    /*color: whitesmoke;*/
     /* margin: 0 auto; */
   }
   </style>
