--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       color: #fff !important;
   }
   .navbar-nav li a:hover, .navbar-nav li.active a {
-      color: blue !important;
+      color: #0072b1 !important;
       background-color: #fff !important;
   }
   .navbar-default .navbar-toggle {
