--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
   body {
       font: 400 15px Lato, sans-serif;
       line-height: 1.8;
-      color: #818181;
+      color: whitesmoke;
   }
   h2 {
       font-size: 24px;
       text-transform: uppercase;
-      color: #303030;
+      /*color: #303030;*/
       font-weight: 600;
       margin-bottom: 30px;
   }
