--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   h4 {
       font-size: 19px;
       line-height: 1.375em;
-      color: #303030;
+      /*color: #303030;*/
       font-weight: 400;
       margin-bottom: 30px;
   }  
@@ -39,7 +39,7 @@
       rgba(43, 62, 80, 0.5)),
       url(pedro-lastra-157071-unsplash.jpg) no-repeat fixed;
       background-size: cover;
-      color: #fff;
+      /*color: #fff;*/
       padding: 100px 25px;
       font-family: Montserrat, sans-serif;
       margin: 0 auto;
