--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
       /*color: #303030;*/
       font-weight: 400;
       margin-bottom: 30px;
-  }  
+  }
+  h3 {
+    color: #0072b1 !important;
+  }
   .jumbotron {
       /* background-color: #2b3e50; */
       background: linear-gradient(rgba(43, 62, 80, 0.8),
