--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
       font-weight: 400;
       margin-bottom: 30px;
   }
-  h3 {
+  h3, h1, p {
     color: #0072b1 !important;
   }
+
   .jumbotron {
       /* background-color: #2b3e50; */
       background: linear-gradient(rgba(43, 62, 80, 0.8),
@@ -225,6 +226,7 @@
     background: whitesmoke;
     color: black;
     padding: 15px;
+    border-radius: 12px;
   }
 
   #about,h2,h4{
@@ -286,10 +288,10 @@
   </div>
 </div>
 
-<div style="background-image: url(FEBE.png); width:100%; height:450px;"class="container-fluid bg-grey">
-  <div class="row">
-  </div>
-</div>
+<!--<div style="background-image: url(FEBE.png); width:auto; height:450px;"class="container-fluid bg-grey">-->
+<!--  <div class="row">-->
+<!--  </div>-->
+<!--</div>-->
 
 <!-- Container (Skills  Section) -->
 <div id="skills" class="container-fluid text-center">
