--- a/index.html
+++ b/index.html
@@ -33,9 +33,6 @@
       font-weight: 400;
       margin-bottom: 30px;
   }
-  h3, h1, p {
-    color: #0072b1 !important;
-  }
 
   .jumbotron {
       /* background-color: #2b3e50; */
@@ -43,11 +40,19 @@
       rgba(43, 62, 80, 0.5)),
       url(pedro-lastra-157071-unsplash.jpg) no-repeat fixed;
       background-size: cover;
-      /*color: #fff;*/
       padding: 100px 25px;
       font-family: Montserrat, sans-serif;
       margin: 0 auto;
   }
+
+  .jumbotron, h1, p {
+    color: whitesmoke;
+  }
+
+  h3, h1, p {
+    color: #0072b1;
+  }
+
   .container-fluid {
       padding: 60px 50px;
   }
@@ -55,7 +60,7 @@
       background-color: #f6f6f6;
   }
   .logo-small {
-      color: purple;
+      color: whitesmoke;
       font-size: 50px;
   }
   .logo {
@@ -229,7 +234,7 @@
     border-radius: 12px;
   }
 
-  #about,h2,h4{
+  #about,h2,h4,#skills,#portfolio,#contact,footer{
     background: linear-gradient(rgba(43, 62, 80, 0.8),
     rgba(43, 62, 80, 0.5)),
     url(pedro-lastra-157071-unsplash.jpg) no-repeat fixed;
@@ -266,8 +271,8 @@
 
 <div class="jumbotron text-center">
   <h1>Luis Rosales</h1> 
-  <p>SOFTWARE DEVELOPER</p>
-  <p>FULLSTACK WEB DEVELOPER</p>
+  <h4>SOFTWARE DEVELOPER</h4>
+<!--  <h4>FULLSTACK WEB DEVELOPER</h4>-->
   <a href="resume_LR.pdf" class="btnresume" download>Download Resume PDF</a>
 </div>
 
@@ -288,10 +293,10 @@
   </div>
 </div>
 
-<!--<div style="background-image: url(FEBE.png); width:auto; height:450px;"class="container-fluid bg-grey">-->
-<!--  <div class="row">-->
-<!--  </div>-->
-<!--</div>-->
+<div style="background-image: url(FEBE.png); width:auto; height:450px;"class="container-fluid bg-grey">
+  <div class="row">
+  </div>
+</div>
 
 <!-- Container (Skills  Section) -->
 <div id="skills" class="container-fluid text-center">
@@ -301,25 +306,25 @@
   <br>
   <div class="row slideanim">
     <div class="col-sm-4">
-      <span class="fa fa-database" style="font-size: 60px; color:green"></span>
-      <h4>DATABASES</h4>
-      <h3>MySQL, JDBC, JPA</h3>
-      <h3>MongoDB</h3>
-      <h3>Firebase</h3>
-    </div>
-    <div class="col-sm-4">
-      <span class="fa fa-server" style="font-size:60px; color:rgb(206, 148, 148)" ></span>
-      <h4>SERVER</h4>
-      <h3>Java Spring Boot</h3>
-      <h3>Node.js - Express.js</h3>
-      <h3>PHP</h3>
-    </div>
-    <div class="col-sm-4">
-      <span class="material-icons" style="font-size:60px;color: yellowgreen">language</span>
+      <span class="material-icons" style="font-size:60px;color: greenyellow">language</span>
       <h4>LANGUAGES</h4>
-      <h3>Java</h3>
-      <h3>Python</h3>
-      <h3>JavaScript</h3>
+      <h3 style="color:whitesmoke">Java</h3>
+      <h3 style="color:whitesmoke">Python</h3>
+      <h3 style="color:whitesmoke">JavaScript</h3>
+    </div>
+    <div class="col-sm-4" style="color:chocolate">
+      <span class="fa fa-server" style="font-size:60px" ></span>
+      <h4>SERVER</h4>
+      <h3 style="color:chocolate">Java Spring Boot</h3>
+      <h3 style="color:chocolate">Node.js - Express.js</h3>
+      <h3 style="color:chocolate">PHP</h3>
+    </div>
+    <div class="col-sm-4" style="color: orange">
+      <span class="fa fa-database" style="font-size: 60px"></span>
+      <h4>DATABASES</h4>
+      <h3 style="color: orange">MySQL, JDBC, JPA</h3>
+      <h3 style="color: orange">MongoDB</h3>
+      <h3 style="color: orange">Firebase</h3>
     </div>
   </div>
   <br><br>
@@ -327,17 +332,17 @@
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-wrench logo-small"></span>
       <h4>TOOLS</h4>
-      <h3>HTML5 & CSS3</h3>
+      <h3 style="color: whitesmoke">HTML5 & CSS3</h3>
     </div>
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-wrench logo-small"></span>
       <h4>TOOLS</h4>
-      <h3>Plotly</h3>
+      <h3 style="color: whitesmoke">Plotly</h3>
     </div>
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-wrench logo-small"></span>
       <h4>TOOLS</h4>
-      <h3>Bootstrap</h3>
+      <h3 style="color: whitesmoke">Bootstrap</h3>
     </div>
   </div>
 </div>
@@ -412,12 +417,12 @@
 
 
 <!-- Container (Contact Section) -->
-<div id="contact" class="container-fluid bg-grey">
+<div id="contact" class="container-fluid">
   <h2 class="text-center">CONTACT</h2>
   <div class="row">
     <div class="col-sm-5">
-      <h1>Reach out for more information about my projects, employment, contact info, and resume.</h1>
-      <p><span class="glyphicon glyphicon-map-marker"></span> Chicago, IL</p>
+      <h1 style="color: whitesmoke">Reach out for more information about my projects, employment, contact info, and resume.</h1>
+      <p style="color: whitesmoke"><span class="glyphicon glyphicon-map-marker"></span> Chicago, IL</p>
       <!-- <p><span class="glyphicon glyphicon-phone"></span> +00 1515151515</p> -->
       <!-- <p><span class="glyphicon glyphicon-envelope"></span> guama1239@gmail.com</p> -->
     </div>
@@ -458,7 +463,7 @@ Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
 <footer class="container-fluid text-center">
   <a href="#myPage" title="To Top">
     <span class="glyphicon glyphicon-chevron-up"></span>
-    </a><p>&copy; Copyright 2022 Luis Rosales <a href="https://github.com/guama1239" title="Visit my github"><br>https://github.com/guama1239</a></p>
+    </a><p style="color: whitesmoke">&copy; Copyright 2022 Luis Rosales <a style="color: whitesmoke" href="https://github.com/guama1239" title="Visit my github"><br>https://github.com/guama1239</a></p>
 </footer>
 
 <script>
