--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
     border-radius: 12px;
   }
 
-  #about,h2,h4,#skills,#portfolio,#contact,footer{
+  #about,h2,h4,#skills,#portfolio,#contact,footer,.col-sm-4{
     background: linear-gradient(rgba(43, 62, 80, 0.8),
     rgba(43, 62, 80, 0.5)),
     url(pedro-lastra-157071-unsplash.jpg) no-repeat fixed;
@@ -367,7 +367,7 @@
         <!--        <img src="barkparkscheroku.png" alt="Bark Park" width="400" height="300">-->
         <p><strong>Happy Clinic</strong></p>
         <p>Connecting Health Care Professionals to Communities</p>
-        <p>Java, Spring Boot, JDBC, JPA</p>
+        <p>Java, Spring Boot, JDBC, JPA, Leaf</p>
       </div>
     </div>
     <div class="col-sm-4">
