--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
       <div class="thumbnail">
 <!--        <a href = "https://quangao.github.io/dinner-savior/"><img src="DinnerSavior.png" alt="Dinner Savior" width="400" height="300"></a>-->
         <!--        <img src="DinnerSavior.png" alt="Dinner Savior" width="400" height="300">-->
-        <p><strong>Plotly Map App</strong></p>
+        <p><strong>&#x1F6A7; Plotly Map App &#x1F6A7;</strong></p>
 <!--        <p>Firebase-powered restaurant wait-time reporting</p>-->
 <!--        <p>Local Storage</p>-->
       </div>
@@ -374,7 +374,7 @@
       <div class="thumbnail">
 <!--        <a href = "https://alaporteslive.herokuapp.com"><img src="atthegate.png" alt="AtTheGate" width="400" height="300"></a>-->
         <!--        <img src="atthegate.png" alt="AtTheGate" width="400" height="300">-->
-        <p><strong>Stock Market Analysis App</strong></p>
+        <p><strong>&#x1F6A7;Stock Market Analysis App &#x1F6A7;</strong></p>
 <!--        <p>Pre order food from any vendor inside the terminal / gate from which your flight is departing from</p>-->
 <!--        <p>React.js-Firebase authentication for REACT-MongoDB</p>-->
       </div>
